--- a/config/project/project.yaml
+++ b/config/project/project.yaml
@@ -1,4 +1,4 @@
-dateModified: 1645377358
+dateModified: 1645587917
 email:
   fromEmail: vargasman11@gmail.com
   fromName: cataldo
@@ -6,6 +6,7 @@ email:
 meta:
   __names__:
     0f6e04df-ce19-4a89-b89d-e879e822e087: cataldo # cataldo
+    1e1c76bf-adb2-42c6-8c5a-b7a9e7f3590a: 'Full Caption' # Full Caption
     02a36630-55a8-4e27-bff9-baf27ef9366f: Blog # Blog
     3a37bd5e-2600-4ff2-ab18-fbaea082805f: 'Author Bio' # Author Bio
     5b9d684d-5da2-445d-bc48-51b9ae352a6c: 'Page Content' # Page Content
@@ -14,6 +15,7 @@ meta:
     42ecf3de-1855-4712-8a70-a5ffe8b5b546: Globals # Globals
     43b1aff8-18d4-4ba3-93ec-d0f2e3415d5b: Globals # Globals
     082c475d-689f-427b-90b2-a941e80f665b: Gallery # Gallery
+    600f401e-826d-4a9b-a4ff-6003ca8d4055: 'Short Caption' # Short Caption
     7637aad2-967f-4c26-8220-284ff09a09ab: cataldo # cataldo
     7798dd4a-df02-4fb9-bd74-ba5b3861a3b2: Page # Page
     63286c93-ccf3-4610-a89f-1aeef4ff2dda: Default # Default
