--- a/.env.example
+++ b/.env.example
@@ -11,9 +11,9 @@ SECURITY_KEY=
 DB_DRIVER=mysql
 DB_SERVER=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=
+DB_DATABASE=cataldo
 DB_USER=root
-DB_PASSWORD=
+DB_PASSWORD=root
 DB_SCHEMA=public
 DB_TABLE_PREFIX=
 
