--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
     "carlcs/craft-redactorcustomstyles": "3.0.4",
     "craftcms/cms": "3.7.36",
     "craftcms/redactor": "2.10.5",
+    "nystudio107/craft-seomatic": "3.4.26",
     "venveo/craft-redactor-split": "1.1.1",
     "verbb/comments": "1.9.2",
     "verbb/redactor-tweaks": "2.0.4",
